# openlink

./: .wakatime-project  index.html  package.json  vite.config.ts
.gitea/workflows/: build.yml
.github/: copilot-instructions.md
.github/workflows/: build.yml  deploy.yml
src/: index.tsx  protectRoute.tsx  test.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: auth.ts  edulink.tsx  fetch.ts  items.ts  main.ts
src/api/endpoints/: accountSignin.ts  attendClub.ts  findSchoolFromCode.ts  getABLookup.ts  getAchievement.ts  getAttendance.ts  getBehaviour.ts  getClub.ts  getClubs.ts  getCommunicator.ts  getDocument.ts  getDocuments.ts  getExams.ts  getExternalLinks.ts  getForms.ts  getHomework.ts  getPersonal.ts  getStatus.ts  getTeacherPhotos.ts  getTimetable.ts  schoolLookup.ts  template.ts
src/assets/css/: account.css  achievement.css  attendance.css  behaviour.css  clubs.css  documents.css  exams.css  forms.css  homework.css  index.css  links.css  login.css  main.css  messages.css  timetable.css
src/assets/jsons/: version.json
src/components/: documents.tsx  footer.tsx  header.tsx  navigation.tsx  settings.tsx  timetable.tsx  toast.tsx
src/components/items/: account.tsx  achievement.tsx  attendance.tsx  behaviour.tsx  clubs.tsx  documents.tsx  exams.tsx  forms.tsx  homework.tsx  links.tsx  messages.tsx  timetable.tsx
src/pages/: dash.tsx  login.tsx
src/types/: auth.ts  global.ts
src/types/api/: ablookup.ts  achievement.ts  attendance.ts  (+12 more)
(+107 files in other folders)
