[package]
name = "edudesk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "edudesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-runtime-verso-build = { git = "https://github.com/versotile-org/tauri-runtime-verso.git" }

[dependencies]
tauri = { version = "2.8.4", default-features = false, features = [
    "common-controls-v6",
    "x11",
] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "26.0.1"
webkit2gtk = "2.0.1"
tauri-plugin-http = "2"
tauri-plugin-keyring = "0.1.0"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
rand = "0.9.2"
sha2 = "0.10.9"
pbkdf2 = "0.12.2"

[profile.dev]
incremental = true
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 1
debug = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
